Basic ATM Account sign-up added. More designs and functionalities to come...

--- a/DjangoATM/ATM/templates/ATM/index.html
+++ b/DjangoATM/ATM/templates/ATM/index.html
@@ -1,1 +1,14 @@
-<h1>Hello Group 1!</h1>
+<h1>
+    Hello Group 1!
+    <br>ATM Card Website <span style="font-size:24"> (better name needed)</span> <!-- put a better name here -->
+</h1>
+
+<button onclick="location.href = '/signup'">Create Account</button>
+
+<script>
+
+</script>
+
+<style>
+    
+</style>
