--- a/DjangoATM/ATM/templates/ATM/signup.html
+++ b/DjangoATM/ATM/templates/ATM/signup.html
@@ -5,7 +5,7 @@
 <h1>ATM Card Reigstration</h1>
 <br>
 
-<form action="" method="POST">
+<form action="" method="pos">
     {% csrf_token %}  
     {{form}}
 
