--- a/DjangoATM/ATM/templates/ATM/signup.html
+++ b/DjangoATM/ATM/templates/ATM/signup.html
@@ -1,18 +1,20 @@
-<head>
-<link rel="stylesheet" href="index.css">
-</head>
-
 <h1>ATM Card Reigstration</h1>
 <br>
 
-<form action="" method="pos">
-    {% csrf_token %}  
-    {{form}}
+{% load crispy_forms_tags %}
+<div id="sUpForm">
+    <form  action="" method="POST">
+        {% csrf_token %}  
+        <!-- {% crispy form %} -->
+        {{form}}
 
-    <br><br>
-    <input type="submit">
+        <br><br>
+        <input type="submit">
 
-</form>
+    </form>
+</div>
+
+<h2>{{ text }}</h2>
 
 <script>
     
@@ -22,6 +24,11 @@
     body{
         background-color: antiquewhite;
     }
+
+    #sUpForm, h1{
+        text-align:center;
+    }
+
 </style>
 
 
