--- a/DjangoATM/ATM/templates/ATM/signup.html
+++ b/DjangoATM/ATM/templates/ATM/signup.html
@@ -1,20 +1,29 @@
 <h1>ATM Card Reigstration</h1>
 <br>
-
-{% load crispy_forms_tags %}
 <div id="sUpForm">
-    <form  action="" method="POST">
-        {% csrf_token %}  
-        <!-- {% crispy form %} -->
-        {{form}}
+    <tr>
+        <form action="" method="post">
+            {% csrf_token %}
+            {% for field in form %}
+                <td>
+                <table>
+                <tr><td>{{ field.label }}</td></tr>
+                <tr><td>{{ field }}</td></tr>
+                </table>
+                </td>
+            {% endfor %}
+            <br>
+            <span id="submitButton">
+                <button onclick="location.href = '/'">Cancel</button>
+                <input type="submit">
+            </span>
+            
 
-        <br><br>
-        <input type="submit">
-
-    </form>
+        </form>
+    </tr>
 </div>
-
-<h2>{{ text }}</h2>
+    
+<h2>{{ text }}</h2> <!-- Submission success message -->
 
 <script>
     
@@ -26,8 +35,14 @@
     }
 
     #sUpForm, h1{
-        text-align:center;
+        margin-left: 600px;
     }
+
+    #submitButton{
+        margin-left:220px;
+        margin-top:120px;
+    }
+    
 
 </style>
 
