--- a/DjangoATM/ATM/templates/ATM/add-card.html
+++ b/DjangoATM/ATM/templates/ATM/add-card.html
@@ -12,6 +12,7 @@
                 </table>
                 </td>
             {% endfor %}
+
             <br>
             <span id="submitButton">
                 <button onclick="location.href = '/'">Cancel</button>
@@ -35,6 +36,7 @@
     }
 
     #sUpForm, h1{
+        margin-top: 20px;
         margin-left: 600px;
     }
 
