--- a/DjangoATM/ATM/templates/ATM/login.html
+++ b/DjangoATM/ATM/templates/ATM/login.html
@@ -3,7 +3,7 @@
 <form method="POST" action="">
     {% csrf_token %}
     <div style="margin-left:620px">
-        <input type="text" name="username" placeholder="Username..." class="form-control">
+        <input type="text" name="username" placeholder="Account name..." class="form-control">
     </div>
 
     <div style="margin-left:620px">
@@ -13,6 +13,12 @@
     <button type="submit"value="Login">Login</button>
 
 </form>
+
+<marquee scrollamount="18.5" behavior="slide" direction="down">
+    {% for message in messages %}
+    <p id="messages">{{message}}</p>
+    {% endfor %}	
+</marquee>
 
 <script>
 
@@ -48,8 +54,8 @@
         margin: 8px 0;
         border: none;
         cursor: pointer;
-        width: 20%;
-        margin-left: 600px;
+        width: 10%;
+        margin-left: 680px;
     }
 
     button:hover {
@@ -59,6 +65,18 @@
     .container {
         padding: 47px;
     }
+
+    #messages{
+        text-align:center;
+		background-color: rgb(231, 193, 88);
+		color: #fff;
+        padding: 10px;
+		width: 500px;
+        height: 24px;
+		margin-top: -3px;
+        margin-left: 520px;
+            
+		}
 </style>
 
 
