--- a/DjangoATM/ATM/templates/ATM/index.html
+++ b/DjangoATM/ATM/templates/ATM/index.html
@@ -14,7 +14,7 @@
         {% endfor %}
         </div>
     <button type="submit"name="Create User">Register Account</button>
-    <p style="margin-left: 598px;">Already haven an account? Log in <a href='login/'>here</a></p>
+    <p style="margin-left: 598px;">Already have an account? Log in <a href='login/'>here</a></p>
     </div>
 </form>
 
